[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
    "ocios/zk-sdk",
    "ocios/curve25519",
    "ocios/zk-token-sdk",
    "ocios/compute-budget",
    "ocios/timings",
    "ocios/type-overrides",
    "ocios/sbpf",
    "ocios/log-collector",
    "ocios/measure",
    "ocios/metrics",
    "ocios/program-runtime",
    "ocios/poseidon",
    "ocios/security-txt",
    "ocios/ocp/token",
    "ocios/ocp/memo",
    "ocios/ocp/program-error-derive",
    "ocios/ocp/program-error",
    "ocios/ocp/pod",
    "ocios/ocp/discriminator-syn",
    "ocios/ocp/discriminator-derive",
    "ocios/ocp/discriminator",
    "ocios/ocp/type-length-value-derive",
    "ocios/ocp/type-length-value",
    "ocios/ocp/token-group-interface",
    "ocios/ocp/token-metadata-interface",
    "ocios/ocp/tlv-account-resolution",
    "ocios/ocp/transfer-hook-interface",
    "ocios/ocp/token-group-interface",
    "ocios/ocp/token-metadata-interface",
    "ocios/ocp/transfer-hook-interface",
    "ocios/ocp/token-confidential-transfer-proof-extraction",
    "ocios/ocp/token-confidential-transfer-ciphertext-arithmetic",
    "ocios/ocp/token-confidential-transfer-proof-generation",
    "ocios/ocp/elgamal-registry",
    "ocios/ocp/token-2022",
    "ocios/ocp/associated-token-account-client",
    "ocios/ocp/associated-token-account",
    "ocios/ocp/instruction-padding",
    "ocios/ocp/vote",
    "ocios/ocp/zk-elgamal-proof",
    "ocios/ocp/zk-token-proof",
    "ocios/ocp/address-lookup-table",
    "ocios/ocp/bpf_loader",
    "ocios/ocp/compute-budget",
    "ocios/ocp/config",
    "ocios/ocp/loader-v4",
    "ocios/ocp/stake",
    "ocios/ocp/system",
    "ocios/version",
    "ocios/rayon-threadlimit",
    "ocios/inline-spl",
    "ocios/lattice-hash",
    "ocios/bucket_map",
    "ocios/vm-transaction",
    "ocios/nohash-hasher",
    "ocios/accounts-db",
    "ocios/builtins-default-costs",
    "ocios/transaction-view",
    "ocios/compute-budget-instruction",
    "ocios/runtime-transaction",
    "ocios/vm-rent-collector",
    "ocios/fee",
    "ocios/vm-conformance",
    "ocios/cost-model",
    "ocios/perf",
    "ocios/account-decoder-client-types",
    "ocios/account-decoder",
    "ocios/transaction-status-client-types",
    "ocios/transaction-status",
    "ocios/vote",
    "ocios/vm",
    "ocios/builtins",
    "ocios/unified-scheduler-logic",
    "ocios/runtime",
    "consensus/merkle-tree",
    "consensus/entry",
    "consensus/storage-proto",
    "consensus/storage-bigtable",
    "consensus/ledger",
    "consensus/poh",
    "network/net-utils",
    "network/connection-cache",
    "network/rpc-client-api",
    "network/rpc-client",
    "network/remote-wallet",
    "network/clap-utils",
    "network/rpc-client-nonce-utils",
    "network/pubsub-client",
    "network/tls-utils",
    "network/streamer",
    "network/transaction-metrics-tracker",
    "network/quic-client",
    "network/thin-client",
    "network/tpu-client",
    "network/udp-client",
    "network/client",
    "network/bloom",
    "network/gossip",
    "access/send-transaction-service",
    "access/cli-config",
    "access/faucet",
    "access/rpc",
    "access/geyser-plugin-interface",
    "access/geyser-plugin-manager",
    "access/turbine",
    "access/chain/banking-stage-ingress-types",
    "access/chain/unified-scheduler-pool",
    "access/chain/wen-restart",
    "access/chain/thread-manager",
    "access/chain/core",
    "node/banks-interface",
    "node/banks-server",
    "node/banks-client",
    "node/program-test",
    "node/cli-output",
    "node/test-validator",
    "node/download-utils",
    "node/genesis-utils",
    "node/validator",
    "tool/tps-client",
    "tool/cli",
    "tool/genesis",
    "tool/clap-v3-utils",
    "tool/keygen",
    "tool/zk-keygen",
    "tool/local-cluster",
    "tool/bench-tps",
    "tool/dos",
    "tool/cargo-registry",
    "tool/tokens",
]

resolver = "2"

exclude = [
    "lang/ocpl/logger",
    "lang/ocpl/frozen-abi-macro",
    "lang/ocpl/frozen-abi",
    "lang/ocpl/atomic-u64",
    "lang/ocpl/decode-error",
    "lang/ocpl/define-syscall",
    "lang/ocpl/sanitize",
    "lang/ocpl/hash",
    "lang/ocpl/keccak-hasher",
    "lang/ocpl/sha256-hasher",
    "lang/ocpl/pubkey",
    "lang/ocpl/instruction",
    "lang/ocpl/serialize-utils",
    "lang/ocpl/msg",
    "lang/ocpl/program-error",
    "lang/ocpl/program-memory",
    "lang/ocpl/account-info",
    "lang/ocpl/sdk-macro",
    "lang/ocpl/sdk-ids",
    "lang/ocpl/sysvar-id",
    "lang/ocpl/clock",
    "lang/ocpl/epoch-schedule",
    "lang/ocpl/fee-calculator",
    "lang/ocpl/last-restart-slot",
    "lang/ocpl/program-entrypoint",
    "lang/ocpl/rent",
    "lang/ocpl/slot-hashes",
    "lang/ocpl/slot-history",
    "lang/ocpl/bincode",
    "lang/ocpl/stable-layout",
    "lang/ocpl/cpi",
    "lang/ocpl/native-token",
    "lang/ocpl/program-option",
    "lang/ocpl/program-pack",
    "lang/ocpl/secp256k1-recover",
    "lang/ocpl/short-vec",
    "lang/ocpl/serde-varint",
    "lang/ocpl/transaction-error",
    "lang/ocpl/big-mod-exp",
    "lang/ocpl/blake3-hasher",
    "lang/ocpl/borsh",
    "lang/ocpl/epoch-rewards",
    "lang/ocpl/nonce",
    "lang/ocpl/instructions-sysvar",
    "lang/ocpl/stake-interface",
    "lang/ocpl/sysvar",
    "lang/ocpl/account",
    "lang/ocpl/system-interface",
    "lang/ocpl/feature-gate-interface",
    "lang/ocpl/feature-gate-client",
    "lang/ocpl/address-lookup-table-interface",
    "lang/ocpl/compute-budget-interface",
    "lang/ocpl/loader-v2-interface",
    "lang/ocpl/loader-v3-interface",
    "lang/ocpl/loader-v4-interface",
    "lang/ocpl/vote-interface",
    "lang/ocpl/message",
    "lang/ocpl/example-mocks",
    "lang/ocpl/program",
    "lang/ocpl/derivation-path",
    "lang/ocpl/signature",
    "lang/ocpl/bn254",
    "lang/ocpl/feature-set",
    "lang/ocpl/packet",
    "lang/ocpl/precompile-error",
    "lang/ocpl/inflation",
    "lang/ocpl/epoch-info",
    "lang/ocpl/epoch-rewards-hasher",
    "lang/ocpl/fee-structure",
    "lang/ocpl/hard-forks",
    "lang/ocpl/seed-derivable",
    "lang/ocpl/seed-phrase",
    "lang/ocpl/signer",
    "lang/ocpl/keypair",
    "lang/ocpl/nonce-account",
    "lang/ocpl/offchain-message",
    "lang/ocpl/poh-config",
    "lang/ocpl/presigner",
    "lang/ocpl/reward-info",
    "lang/ocpl/reserved-account-keys",
    "lang/ocpl/commitment-config",
    "lang/ocpl/cluster-type",
    "lang/ocpl/serde",
    "lang/ocpl/time-utils",
    "lang/ocpl/shred-version",
    "lang/ocpl/genesis-config",
    "lang/ocpl/rent-collector",
    "lang/ocpl/rent-debits",
    "lang/ocpl/ocp/ed25519-program",
    "lang/ocpl/ocp/secp256k1-program",
    "lang/ocpl/ocp/secp256r1-program",
    "lang/ocpl/precompiles",
    "lang/ocpl/transaction",
    "lang/ocpl/client-traits",
    "lang/ocpl/system-transaction",
    "lang/ocpl/fee-structure",
    "lang/ocpl/quic-definitions",
    "lang/ocpl/validator-exit",
    "lang/ocpl/transaction-context",
    "lang/ocpl/sdk",
    "lang/ocpl/file-download",
    "lang/ocpl/package-metadata-macro",
    "lang/ocpl/package-metadata",
]

[workspace.package]
version = "2.2.1"
authors = ["Bovey Maintainers <maintainers@solana.xyz>"]
repository = "https://github.com/nabob-labs/solana-spe"
homepage = "https://solana.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[workspace.dependencies]
# On Chain Program Language
solana-logger = { path = "lang/ocpl/logger" }
solana-frozen-abi-macro = { path = "lang/ocpl/frozen-abi-macro" }
solana-frozen-abi = { path = "lang/ocpl/frozen-abi" }
solana-atomic-u64 = { path = "lang/ocpl/atomic-u64" }
solana-decode-error = { path = "lang/ocpl/decode-error" }
solana-define-syscall = { path = "lang/ocpl/define-syscall" }
solana-sanitize = { path = "lang/ocpl/sanitize" }
solana-hash = { path = "lang/ocpl/hash", default-features = false }
solana-keccak-hasher = { path = "lang/ocpl/keccak-hasher" }
solana-sha256-hasher = { path = "lang/ocpl/sha256-hasher" }
solana-pubkey = { path = "lang/ocpl/pubkey", default-features = false }
solana-instruction = { path = "lang/ocpl/instruction", default-features = false }
solana-serialize-utils = { path = "lang/ocpl/serialize-utils" }
solana-msg = { path = "lang/ocpl/msg" }
solana-program-error = { path = "lang/ocpl/program-error" }
solana-program-memory = { path = "lang/ocpl/program-memory" }
solana-account-info = { path = "lang/ocpl/account-info" }
solana-sdk-macro = { path = "lang/ocpl/sdk-macro" }
solana-sdk-ids = { path = "lang/ocpl/sdk-ids" }
solana-sysvar-id = { path = "lang/ocpl/sysvar-id" }
solana-clock = { path = "lang/ocpl/clock" }
solana-epoch-schedule = { path = "lang/ocpl/epoch-schedule" }
solana-fee-calculator = { path = "lang/ocpl/fee-calculator" }
solana-last-restart-slot = { path = "lang/ocpl/last-restart-slot" }
solana-program-entrypoint = { path = "lang/ocpl/program-entrypoint" }
solana-rent = { path = "lang/ocpl/rent", default-features = false }
solana-slot-hashes = { path = "lang/ocpl/slot-hashes" }
solana-slot-history = { path = "lang/ocpl/slot-history" }
solana-bincode = { path = "lang/ocpl/bincode" }
solana-stable-layout = { path = "lang/ocpl/stable-layout" }
solana-cpi = { path = "lang/ocpl/cpi" }
solana-native-token = { path = "lang/ocpl/native-token" }
solana-program-option = { path = "lang/ocpl/program-option" }
solana-program-pack = { path = "lang/ocpl/program-pack" }
solana-secp256k1-recover = { path = "lang/ocpl/secp256k1-recover" }
solana-short-vec = { path = "lang/ocpl/short-vec" }
solana-serde-varint = { path = "lang/ocpl/serde-varint" }
solana-transaction-error = { path = "lang/ocpl/transaction-error" }
solana-big-mod-exp = { path = "lang/ocpl/big-mod-exp" }
solana-blake3-hasher = { path = "lang/ocpl/blake3-hasher" }
solana-borsh = { path = "lang/ocpl/borsh" }
solana-epoch-rewards = { path = "lang/ocpl/epoch-rewards" }
solana-nonce = { path = "lang/ocpl/nonce" }
solana-instructions-sysvar = { path = "lang/ocpl/instructions-sysvar" }
solana-stake-interface = { path = "lang/ocpl/stake-interface" }
solana-sysvar = { path = "lang/ocpl/sysvar" }
solana-account = { path = "lang/ocpl/account" }
solana-system-interface = { path = "lang/ocpl/system-interface" }
solana-feature-gate-interface = { path = "lang/ocpl/feature-gate-interface" }
solana-feature-gate-client = { path = "lang/ocpl/feature-gate-client" }
solana-address-lookup-table-interface = { path = "lang/ocpl/address-lookup-table-interface" }
solana-compute-budget-interface = { path = "lang/ocpl/compute-budget-interface" }
solana-loader-v2-interface = { path = "lang/ocpl/loader-v2-interface" }
solana-loader-v3-interface = { path = "lang/ocpl/loader-v3-interface" }
solana-loader-v4-interface = { path = "lang/ocpl/loader-v4-interface" }
solana-vote-interface = { path = "lang/ocpl/vote-interface" }
solana-message = { path = "lang/ocpl/message" }
solana-example-mocks = { path = "lang/ocpl/example-mocks" }
solana-program = { path = "lang/ocpl/program", default-features = false }
solana-derivation-path = { path = "lang/ocpl/derivation-path" }
solana-signature = { path = "lang/ocpl/signature", default-features = false }
solana-bn254 = { path = "lang/ocpl/bn254" }
solana-feature-set = { path = "lang/ocpl/feature-set" }
solana-packet = { path = "lang/ocpl/packet" }
solana-precompile-error = { path = "lang/ocpl/precompile-error" }
solana-inflation = { path = "lang/ocpl/inflation" }
solana-epoch-info = { path = "lang/ocpl/epoch-info" }
solana-epoch-rewards-hasher = { path = "lang/ocpl/epoch-rewards-hasher" }
solana-fee-structure = { path = "lang/ocpl/fee-structure" }
solana-hard-forks = { path = "lang/ocpl/hard-forks", default-features = false }
solana-seed-derivable = { path = "lang/ocpl/seed-derivable" }
solana-seed-phrase = { path = "lang/ocpl/seed-phrase" }
solana-signer = { path = "lang/ocpl/signer" }
solana-keypair = { path = "lang/ocpl/keypair" }
solana-nonce-account = { path = "lang/ocpl/nonce-account" }
solana-offchain-message = { path = "lang/ocpl/offchain-message" }
solana-poh-config = { path = "lang/ocpl/poh-config" }
solana-presigner = { path = "lang/ocpl/presigner" }
solana-reward-info = { path = "lang/ocpl/reward-info" }
solana-reserved-account-keys = { path = "lang/ocpl/reserved-account-keys", default-features = false }
solana-commitment-config = { path = "lang/ocpl/commitment-config" }
solana-cluster-type = { path = "lang/ocpl/cluster-type" }
solana-serde = { path = "lang/ocpl/serde" }
solana-time-utils = { path = "lang/ocpl/time-utils" }
solana-shred-version = { path = "lang/ocpl/shred-version" }
solana-genesis-config = { path = "lang/ocpl/genesis-config" }
solana-rent-collector = { path = "lang/ocpl/rent-collector" }
solana-rent-debits = { path = "lang/ocpl/rent-debits" }
solana-ed25519-program = { path = "lang/ocpl/ocp/ed25519-program" }
solana-secp256k1-program = { path = "lang/ocpl/ocp/secp256k1-program" }
solana-secp256r1-program = { path = "lang/ocpl/ocp/secp256r1-program", default-features = false }
solana-precompiles = { path = "lang/ocpl/precompiles" }
solana-transaction = { path = "lang/ocpl/transaction" }
solana-client-traits = { path = "lang/ocpl/client-traits" }
solana-system-transaction = { path = "lang/ocpl/system-transaction" }
solana-quic-definitions = { path = "lang/ocpl/quic-definitions" }
solana-validator-exit = { path = "lang/ocpl/validator-exit" }
solana-transaction-context = { path = "lang/ocpl/transaction-context" }
solana-sdk = { path = "lang/ocpl/sdk" }
solana-file-download = { path = "lang/ocpl/file-download" }
solana-package-metadata-macro = { path = "lang/ocpl/package-metadata-macro" }
solana-package-metadata = { path = "lang/ocpl/package-metadata" }

# On Chain instruction OS
solana-zk-sdk = { path = "ocios/zk-sdk" }
solana-curve25519 = { path = "ocios/curve25519" }
solana-zk-token-sdk = { path = "ocios/zk-token-sdk" }
solana-compute-budget = { path = "ocios/compute-budget" }
solana-timings = { path = "ocios/timings" }
solana-type-overrides = { path = "ocios/type-overrides" }
solana-sbpf = { path = "ocios/sbpf" }
solana-log-collector = { path = "ocios/log-collector" }
solana-measure = { path = "ocios/measure" }
solana-metrics = { path = "ocios/metrics" }
solana-program-runtime = { path = "ocios/program-runtime" }
solana-poseidon = { path = "ocios/poseidon" }
solana-security-txt = { path = "ocios/security-txt" }
spl-token = { path = "ocios/ocp/token" }
spl-memo = { path = "ocios/ocp/memo" }
spl-program-error-derive = { path = "ocios/ocp/program-error-derive" }
spl-program-error = { path = "ocios/ocp/program-error" }
spl-pod = { path = "ocios/ocp/pod" }
spl-discriminator-syn = { path = "ocios/ocp/discriminator-syn" }
spl-discriminator-derive = { path = "ocios/ocp/discriminator-derive" }
spl-discriminator = { path = "ocios/ocp/discriminator" }
spl-type-length-value-derive = { path = "ocios/ocp/type-length-value-derive" }
spl-type-length-value = { path = "ocios/ocp/type-length-value" }
spl-tlv-account-resolution = { path = "ocios/ocp/tlv-account-resolution" }
spl-token-group-interface = { path = "ocios/ocp/token-group-interface" }
spl-token-metadata-interface = { path = "ocios/ocp/token-metadata-interface" }
spl-transfer-hook-interface = { path = "ocios/ocp/transfer-hook-interface" }
spl-token-confidential-transfer-proof-extraction = { path = "ocios/ocp/token-confidential-transfer-proof-extraction" }
spl-token-confidential-transfer-ciphertext-arithmetic = { path= "ocios/ocp/token-confidential-transfer-ciphertext-arithmetic" }
spl-token-confidential-transfer-proof-generation = { path = "ocios/ocp/token-confidential-transfer-proof-generation" }
spl-elgamal-registry = { path =  "ocios/ocp/elgamal-registry" }
spl-token-2022 = { path = "ocios/ocp/token-2022" }
spl-associated-token-account-client = { path = "ocios/ocp/associated-token-account-client" }
spl-associated-token-account = { path = "ocios/ocp/associated-token-account" }
spl-instruction-padding = { path = "ocios/ocp/instruction-padding", features = ["no-entrypoint"] }
solana-vote-program = { path = "ocios/ocp/vote", default-features = false }
solana-zk-elgamal-proof-program = { path = "ocios/ocp/zk-elgamal-proof" }
solana-zk-token-proof-program = { path = "ocios/ocp/zk-token-proof" }
solana-address-lookup-table-program = { path = "ocios/ocp/address-lookup-table" }
solana-bpf-loader-program = { path = "ocios/ocp/bpf_loader" }
solana-compute-budget-program = { path = "ocios/ocp/compute-budget" }
solana-config-program = { path = "ocios/ocp/config" }
solana-loader-v4-program = { path = "ocios/ocp/loader-v4" }
solana-stake-program = { path = "ocios/ocp/stake" }
solana-system-program = { path = "ocios/ocp/system" }
solana-version = { path = "ocios/version" }
solana-rayon-threadlimit = { path = "ocios/rayon-threadlimit" }
solana-inline-spl = { path = "ocios/inline-spl" }
solana-lattice-hash = { path = "ocios/lattice-hash" }
solana-bucket-map = { path = "ocios/bucket_map" }
solana-svm-transaction = { path = "ocios/vm-transaction" }
solana-nohash-hasher = { path = "ocios/nohash-hasher" }
solana-accounts-db = { path = "ocios/accounts-db" }
solana-builtins-default-costs = { path = "ocios/builtins-default-costs" }
agave-transaction-view = { path = "ocios/transaction-view" }
solana-compute-budget-instruction = { path = "ocios/compute-budget-instruction" }
solana-runtime-transaction = { path = "ocios/runtime-transaction" }
solana-svm-rent-collector = { path = "ocios/vm-rent-collector" }
solana-fee = { path = "ocios/fee" }
solana-svm-conformance = { path = "ocios/vm-conformance" }
solana-cost-model = { path = "ocios/cost-model" }
solana-perf = { path = "ocios/perf" }
solana-account-decoder-client-types = { path = "ocios/account-decoder-client-types" }
solana-account-decoder = { path = "ocios/account-decoder" }
solana-transaction-status-client-types = { path = "ocios/transaction-status-client-types" }
solana-transaction-status = { path = "ocios/transaction-status" }
solana-svm = { path = "ocios/vm" }
solana-vote = { path = "ocios/vote" }
solana-builtins = { path = "ocios/builtins" }
solana-unified-scheduler-logic = { path = "ocios/unified-scheduler-logic" }
solana-runtime = { path = "ocios/runtime" }

# Consensus
solana-merkle-tree = { path = "consensus/merkle-tree" }
solana-entry = { path = "consensus/entry" }
solana-storage-proto = { path = "consensus/storage-proto" }
solana-storage-bigtable = { path = "consensus/storage-bigtable" }
solana-ledger = { path = "consensus/ledger" }
solana-poh = { path = "consensus/poh" }

# Network
solana-net-utils = { path = "network/net-utils" }
solana-connection-cache = { path = "network/connection-cache",default-features = false }
solana-rpc-client-api = { path = "network/rpc-client-api" }
solana-rpc-client = { path = "network/rpc-client", default-features = false }
solana-remote-wallet = { path = "network/remote-wallet", default-features = false }
solana-clap-utils = { path = "network/clap-utils" }
solana-rpc-client-nonce-utils = { path = "network/rpc-client-nonce-utils" }
solana-pubsub-client = { path = "network/pubsub-client" }
solana-tls-utils = { path = "network/tls-utils" }
solana-streamer = { path = "network/streamer" }
solana-transaction-metrics-tracker = { path = "network/transaction-metrics-tracker" }
solana-quic-client = { path = "network/quic-client" }
solana-thin-client = { path = "network/thin-client" }
solana-tpu-client = { path = "network/tpu-client", default-features = false }
solana-udp-client = { path = "network/udp-client" }
solana-client = { path = "network/client" }
solana-bloom = { path = "network/bloom" }
solana-gossip = { path = "network/gossip" }

# Access
solana-send-transaction-service = { path = "access/send-transaction-service" }
solana-cli-config = { path = "access/cli-config" }
solana-faucet = { path = "access/faucet" }
solana-rpc = { path = "access/rpc" }
agave-geyser-plugin-interface = { path = "access/geyser-plugin-interface" }
solana-geyser-plugin-manager = { path = "access/geyser-plugin-manager" }
solana-turbine = { path = "access/turbine" }
agave-banking-stage-ingress-types = { path = "access/chain/banking-stage-ingress-types" }
solana-unified-scheduler-pool = { path = "access/chain/unified-scheduler-pool" }
solana-wen-restart = { path = "access/chain/wen-restart" }
agave-thread-manager = { path = "access/chain/thread-manager" }
solana-core = { path = "access/chain/core" }

# Node
solana-banks-interface = { path = "node/banks-interface" }
solana-banks-server = { path = "node/banks-server" }
solana-banks-client = { path = "node/banks-client" }
solana-program-test = { path = "node/program-test" }
solana-cli-output = { path = "node/cli-output" }
solana-test-validator = { path = "node/test-validator" }
solana-download-utils = { path = "node/download-utils" }
solana-genesis-utils = { path = "node/genesis-utils" }
solana-validator = { path = "node/validator" }

# Tool
solana-tps-client = { path = "tool/tps-client" }
solana-cli = { path = "tool/cli" }
solana-genesis = { path = "tool/genesis" }
solana-clap-v3-utils = { path = "tool/clap-v3-utils" }
solana-keygen = { path = "tool/keygen" }
solana-zk-keygen = { path = "tool/zk-keygen" }
solana-local-cluster = { path = "tool/local-cluster" }
solana-bench-tps = { path = "tool/bench-tps" }
solana-dos = { path = "tool/dos" }
solana-cargo-registry = { path = "tool/cargo-registry" }
solana-tokens = { path = "tool/tokens" }

Inflector = "0.11.4"
axum = "0.7.9"
aquamarine = "0.6.0"
aes-gcm-siv = "0.11.1"
ahash = "0.8.11"
anyhow = "1.0.95"
arbitrary = "1.4.1"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
arrayref = "0.3.9"
arrayvec = "0.7.6"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-channel = "1.9.0"
async-lock = "3.4.0"
async-trait = "0.1.86"
atty = "0.2.11"
backoff = "0.4.0"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = { version = "2.8.0" }
blake3 = "1.5.5"
borsh = { version = "1.5.5", features = ["derive", "unstable__schema"] }
borsh0-10 = { package = "borsh", version = "0.10.3" }
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
byte-unit = "4.0.19"
bytecount = "0.6.8"
bytemuck = "1.21.0"
bytemuck_derive = "1.8.1"
bytes = "1.10"
bzip2 = "0.4.4"
caps = "0.5.5"
cargo_metadata = "0.15.4"
cfg_eval = "0.1.2"
cfg-if = "1.0.0"
chrono = { version = "0.4.39", default-features = false }
chrono-humanize = "0.2.3"
clap = "2.33.1"
console = "0.15.10"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
const_format = "0.2.34"
core_affinity = "0.5.10"
criterion = "0.5.1"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5.14"
csv = "1.3.1"
ctrlc = "3.4.5"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
dashmap = "5.5.3"
derivation-path = { version = "0.2.0", default-features = false }
derive-where = "1.2.7"
derive_more = { version = "1.0.0", features = ["full"] }
dialoguer = "0.10.4"
digest = "0.10.7"
dir-diff = "0.3.3"
dirs-next = "2.0.0"
dlopen2 = "0.5.0"
dyn-clone = "1.0.18"
eager = "0.1.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
enum-iterator = "1.5.0"
env_logger = "0.9.3"
etcd-client = "0.11.1"
fast-math = "0.1"
fd-lock = "3.0.13"
flate2 = "1.0.31"
five8_const = "0.1.3"
fnv = "1.0.7"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.29"
gag = "1.0.0"
gethostname = "0.2.3"
getrandom = "0.2.10"
goauth = "0.13.1"
governor = "0.6.3"
hex = "0.4.3"
hidapi = { version = "2.6.3", default-features = false }
histogram = "0.6.9"
hmac = "0.12.1"
http = "0.2.12"
humantime = "2.0.1"
hyper = "0.14.32"
hyper-proxy = "0.9.1"
im = "15.1.0"
index_list = "0.2.15"
indexmap = "2.7.1"
indicatif = "0.17.11"
itertools = "0.12.1"
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
js-sys = "0.3.77"
json5 = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
lazy-lru = "0.1.3"
lazy_static = "1.5.0"
libc = "0.2.169"
libloading = "0.7.4"
libsecp256k1 = { version = "0.6.0", default-features = false, features = [
    "std",
    "static-context",
] }
light-poseidon = "0.2.0"
log = "0.4.25"
lru = "0.7.7"
lz4 = "1.28.1"
memmap2 = "0.5.10"
memoffset = "0.9"
merlin = { version = "3", default-features = false }
min-max-heap = "1.3.0"
mockall = "0.11.4"
modular-bitfield = "0.11.2"
nix = "0.29.0"
num-bigint = "0.4.6"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.16.0"
num_enum = "0.7.3"
openssl = "0.10"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
pem = "1.1.1"
percentage = "0.1.0"
pickledb = { version = "0.5.1", default-features = false }
predicates = "2.1"
pretty-hex = "0.3.0"
prio-graph = "0.3.0"
proc-macro2 = "1.0.93"
proptest = "1.6"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quinn = "0.11.6"
quinn-proto = "0.11.9"
quote = "1.0"
rand = "0.8.5"
rand0-7 = { package = "rand", version = "0.7" }
rand_chacha = "0.3.1"
rand_chacha0-2 = { package = "rand_chacha", version = "0.2.2" }
rayon = "1.10.0"
reed-solomon-erasure = "6.0.0"
regex = "1.11.1"
reqwest = { version = "0.11.27", default-features = false }
reqwest-middleware = "0.2.5"
rolling-file = "0.2.0"
rpassword = "7.3"
rustls = { version = "0.23.22", features = ["std"], default-features = false }
scopeguard = "1.2.0"
semver = "1.0.25"
seqlock = "0.2.0"
serde = "1.0.217" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde-big-array = "0.5.1"
serde_bytes = "0.11.15"
serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.138"
serde_with = { version = "3.12.0", default-features = false }
serde_yaml = "0.9.34"
serial_test = "2.0.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
shuttle = "0.7.1"
signal-hook = "0.3.17"
siphasher = "0.3.11"
slab = "0.4.9"
smallvec = "1.13.2"
smpl_jwt = "0.7.1"
socket2 = "0.5.8"
soketto = "0.7"
static_assertions = "1.1.0"
stream-cancel = "0.8.2"
strum = "0.24"
strum_macros = "0.24"
subtle = "2.6.1"
symlink = "0.1.0"
syn = "2.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
systemstat = "0.2.4"
tar = "0.4.43"
tarpc = "0.29.0"
tempfile = "3.16.0"
test-case = "3.3.1"
thiserror = "2.0.11"
thread-priority = "1.2.0"
tiny-bip39 = "0.8.2"
# Update solana-tokio patch below when updating this version
tokio = "1.43.0"
tokio-serde = "0.8"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.20.1"
tokio-util = "0.7.13"
toml = "0.8.12"
tonic = "0.9.2"
tonic-build = "0.9.2"
tower = "0.5.2"
trait-set = "0.3.0"
trees = "0.4.2"
tungstenite = "0.20.1"
uriparse = "0.6.4"
url = "2.5.4"
vec_extract_if_polyfill = "0.1.0"
wasm-bindgen = "0.2"
winapi = "0.3.8"
winreg = "0.50"
x509-parser = "0.14.0"
# See "zeroize versioning issues" below if you are updating this version.
zeroize = { version = "1.7", default-features = false }
zstd = "0.13.2"

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the solana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in solana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

[patch.crates-io]
# for details, see https://github.com/anza-xyz/crossbeam/commit/fd279d707025f0e60951e429bf778b4813d1b6bf
crossbeam-epoch = { git = "https://github.com/anza-xyz/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }

# We include the following crates as our dependencies above from crates.io:
#
#  * spl-associated-token-account
#  * spl-instruction-padding
#  * spl-memo
#  * spl-pod
#  * spl-token
#  * spl-token-2022
#  * spl-token-metadata-interface
#
# They, in turn, depend on a number of crates that we also include directly
# using `path` specifications.  For example, `spl-token` depends on
# `solana-program`.  And we explicitly specify `solana-program` above as a local
# path dependency:
#
#     solana-program = { path = "lang/ocpl/program" }
#
# Unfortunately, Cargo will try to resolve the `spl-token` `solana-program`
# dependency only using what is available on crates.io.  Crates.io normally
# contains a previous version of these crates, and we end up with two versions
# of `solana-program` and `solana-zk-token-sdk` and all of their dependencies in
# our build tree.
#
# If you are developing downstream using non-crates-io solana-program (local or
# forked repo, or from github rev, eg), duplicate the following patch statements
# in your Cargo.toml. If you still hit duplicate-type errors with the patch
# statements in place, run `cargo update -p solana-program` and/or `cargo update
# -p solana-zk-token-sdk` to remove extraneous versions from your Cargo.lock
# file.
#
# There is a similar override in `programs/sbf/Cargo.toml`.  Please keep both
# comments and the overrides in sync.
#solana-curve25519 = { path = "lang/ocpl/curve25519" }
#solana-zk-sdk = { path = "ocios/zk-sdk" }
